# chatroom

./: .gitattributes  .gitignore  README.md  chatroom.py  config.py  manager.py  pyproject.toml
app/: __init__.py  forms.py  models.py  utils.py  views.py
app/apis/: __init__.py  chatrooms.py  friends.py  serializer.py  socketio.py  users.py
app/static/css/: index.css  login.css
app/static/js/: bootstrap.js  bootstrap_model.js  index.js  login.js  socket.io.dev.js  socket.io.js
app/static/ueditor/: ueditor.config.js
app/static/ueditor/themes/: iframe.css
app/templates/: index.html  login.html  register.html
migrations/versions/: 3779a0092666_.py  58a394659c5b_.py  6e928a114950_.py  88cb7d7aa4a9_.py
scripts/: generate_mock_data.py  init_db.py
